--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div class="container">
-    <header>
+    <header style="margin-top: 40px; text-align: center;">
+      <img src="logo.png" alt="Logo ONG" style="height: 60px; margin-bottom: 10px;">
       <h1>Certificados ONG</h1>
       <button id="connectButton">Conectar con Metamask</button>
     </header>
@@ -36,11 +37,10 @@
         <label for="amount">Cantidad</label>
         <input type="number" id="amount" value="1" min="1">
 
-        <button type="submit">Mintear</button>
+        <button type="submit" style="margin-top: 15px;">Mintear</button>
       </form>
       <p id="status"></p>
     </section>
   </div>
 </body>
 </html>
-
