--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Certificados ONG</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script defer src="script.js"></script>
 </head>
 <body>
   <div class="container">
-    <header style="margin-top: 40px; text-align: center;">
-      <img src="logo.png" alt="Logo ONG" style="height: 60px; margin-bottom: 10px;">
+    <header>
+      <img src="https://rodrigocrem.github.io/ProyectoFinalBlockChain/logo.png" alt="Logo ONG" class="logo" />
       <h1>Certificados ONG</h1>
       <button id="connectButton">Conectar con Metamask</button>
     </header>
@@ -37,7 +37,7 @@
         <label for="amount">Cantidad</label>
         <input type="number" id="amount" value="1" min="1">
 
-        <button type="submit" style="margin-top: 15px;">Mintear</button>
+        <button type="submit">Mintear</button>
       </form>
       <p id="status"></p>
     </section>
