--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       </form>
       <p id="status"></p>
     </section>
+
+    <!-- Sección para mostrar el balance de tokens -->
+    <section class="balance-section">
+      <h2>Tu balance de tokens</h2>
+      <p id="balance">Cargando...</p>
+    </section>
   </div>
 </body>
 </html>
