--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="logo.png" alt="Logo ONG" class="logo" />
+      <img src="images/logo.png" alt="Logo ONG" class="logo" />
       <h1>Certificados ONG</h1>
       <button id="connectButton">Conectar con Metamask</button>
     </header>
