--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-<img src="public/Logo.png" alt="Logo ONG" class="logo" />
+      <img src="public/Logo.png" alt="Logo ONG" class="logo" />
       <h1>Certificados ONG</h1>
       <button id="connectButton">Conectar con Metamask</button>
     </header>
@@ -35,7 +35,7 @@
         </select>
 
         <label for="amount">Cantidad</label>
-        <input type="number" id="amount" value="1" min="1">
+        <input type="number" id="amount" value="1" min="0.000000000000000001" step="0.000000000000000001">
 
         <button type="submit">Mintear</button>
       </form>
